<resources>
    <string name="app_name">ANGA</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- Strings for On Bottom Navigation Bar -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Games">Games</string>
    <string name="ESports">ESports</string>
    <string name="Home">Home</string>
    <string name="Chat">Chat</string>
    <string name="Story">Story</string>
    <string name="More">More\'</string>
    <string name="calender">Calender</string>
    <string name="favourite_teams">Favourite Teams</string>
    <string name="highlights">Highlights</string>


    //Headings
    <string name="heading_one">Esports Gamer &amp; Streamers</string>
    <string name="heading_two">Esports Tournaments &amp; Schedules</string>
    <string name="heading_three">Play Favourite Games in one app</string>
    <string name="heading_fourth">Chats, Share &amp; Social Community</string>

    //Description
    <string name="desc_one">Learn about ESports Through watching Professional Streamers &amp; Enjoy your fun time</string>
    <string name="desc_two">ESports Tournaments are another way to straighten your communication skills &amp; IQ</string>
    <string name="desc_three">Play with your friends &amp; make sure to give a comment</string>
    <string name="desc_fourth">This feature is Coming Soon</string>

    //Tic Tac Toe
    <string name="first_game">Tic Tac Toe</string>
    <string name="player1nameHint">player1 name</string>
    <string name="player2nameHint">player2 name</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="aboutme1">Sayed Mohammad Imam Hossain</string>
    <string name="aboutme2">studying Computer Science &amp; Engineering </string>
    <string name="title_activity_afterStart">Tic Tac Toe</string>

    //Calender
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>


</resources>