<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottom_home">

    <fragment
        android:id="@+id/bottom_home"
        android:name="com.example.anga.bottomnavigation.fragments_bottom.Bottom_Home"
        android:label="@string/Home"
        tools:layout="@layout/fragment_bottom_home" />

    <fragment
        android:id="@+id/bottom_esports"
        android:name="com.example.anga.bottomnavigation.fragments_bottom.Bottom_Esports"
        android:label="@string/ESports"
        tools:layout="@layout/fragment_bottom_esports" />

    <fragment
        android:id="@+id/bottom_games"
        android:name="com.example.anga.bottomnavigation.fragments_bottom.Bottom_Games"
        android:label="@string/Games"
        tools:layout="@layout/fragment_bottom_games" />

</navigation>