<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_pic_background"
    tools:context=".bottomnavigation.fragments_bottom.Bottom_Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/CARD_PROFILE_A"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_shadow_end_color"
                app:cardCornerRadius="45dp"
                app:cardPreventCornerOverlap="true">


                <ImageView
                    android:id="@+id/ggg"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/home_profile_back_12" />

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/user" />

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text="Imam"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:columnCount="2"
                android:rowCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/CARD_HIGHLIGHTS"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/card_highlight_pic"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/highlights_home" />

                    <TextView
                        android:id="@+id/card_highlight_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/highlights"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CARD_CALENDER"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/card_calendar_pic"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/schedule_home" />

                    <TextView
                        android:id="@+id/card_calendar_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="2dp"
                        android:gravity="center_horizontal"
                        android:text="@string/calender"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CARD_GAMES"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/card_games_pic"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/games_home" />

                    <TextView
                        android:id="@+id/card_games_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/Games"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CARD_TEAMS"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardUseCompatPadding="true"
                    android:clickable="true"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/card_teams_pic"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/fav_team_home" />

                    <TextView
                        android:id="@+id/card_teams_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="2dp"
                        android:gravity="center_horizontal"
                        android:text="@string/favourite_teams"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>
            </GridLayout>


        </LinearLayout>

    </ScrollView>
</FrameLayout>